--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,18 @@
+:root{
+  --vermelho:#e50914
+  --preta:#141414
+}
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body{
+
+}
+
+header .container{
+
 }
