--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 :root{
-  --vermelho:#e50914
-  --preta:#141414
+  --vermelho:#e50914;
+  --preta:#141414;
 }
 
 *{
@@ -12,4 +12,14 @@
 body{
   background: var(--preta);
   font-family: 'Times New Roman', Times, serif;
+}
+
+header .container{
+
+}
+
+header .logo{
+  color: var(--vermelho);
+  font-family: 'Arial Black', Times;
+  font-size: 40px;
 }
