--- a/style/main.css
+++ b/style/main.css
@@ -41,3 +41,22 @@ header nav a:hover{
 }
 
 /* FILME PRINCIPAL */
+.filme-principal{
+  font-size: 16px;
+  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)100%), url("/img/capa-theblacklist.jpg");
+  height: 400px;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.filme-principal .descricao{
+  margin-bottom: 40px;
+}
+
+.titulo{
+  text-transform: uppercase;
+  font-size: 40px;
+}
