--- a/style/main.css
+++ b/style/main.css
@@ -60,3 +60,12 @@ header nav a:hover{
   text-transform: uppercase;
   font-size: 40px;
 }
+
+.botao{
+  background-color: rgba(0,0,0,.5);
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  margin-right: 15px;
+  font-size: 12px;
+}
