--- a/style/main.css
+++ b/style/main.css
@@ -25,9 +25,8 @@ header .container{
 
 header .logo{
   margin-left: 5px;
-  color: var(--vermelho);
-  font-family: 'Arial Black', Times;
-  font-size: 40px;
+  width: 10%;
+  
 }
 
 header nav a{
